# Gnome-Templates

Cmake/: CMakeLists.txt
Python/: PythonScript.py
Qt/: qt-Project.pro
VHDL/: VHDL_module.vhd
cpp/Basic/: ClassHeader.h
cpp/GTest/: main.cpp
cpp/QTests/: simpletest.cpp
